# cosmic-ext-constellations

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SPEC.md  TODO.md  baseline  baseline.rs  baseline_after  baseline_after.rs  code_review_response.md  commit_msg  dummy  dummy_tests.rs  i18n.toml  patch.diff  patch_chat.diff  patch_comment.patch  patch_fix.diff  patch_fmt.diff  patch_get_room_name.diff  patch_main.diff  patch_tests_imports.py  plan.md  test_closure  test_closure.rs  test_imbl.rs  test_let_chains  test_let_chains.rs  test_rtc  test_rtc.rs  test_rtc_content.rs  test_rtc_content_v2.rs  test_rtc_import.rs  test_rtc_types.rs  tests.rs  update_comments.sh  update_strings.patch  (+11 more)
.Jules/: palette.md
.agents/skills/: COSMIC-DEVELOPMENT.md  bolt.md  cosmic-automation.md  palette.md  sentinel.md  testing.md
.agents/skills/bolt/: SKILL.md
.agents/skills/cosmic/: COSMIC-DEVELOPMENT.md
.agents/skills/cosmic-automation/: SKILL.md
.agents/skills/cosmic-development/: SKILL.md
.agents/skills/cosmic-profiling/: SKILL.md
.agents/skills/cosmic-profiling/scripts/: profile_run.sh
.agents/skills/cosmic-ui-automation/: SKILL.md
.agents/skills/cosmic-ui-automation/scripts/: test_ui.sh
.agents/skills/palette/: SKILL.md
.agents/skills/sentinel/: SKILL.md
.agents/skills/testing/: SKILL.md
.cargo/: config.toml
.github/workflows/: main.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/maestro/plans/: 2026-04-04-fix-sync-error-design.md  2026-04-04-fix-sync-error-impl-plan.md  2026-04-04-login-design.md  2026-04-04-login-impl-plan.md  2026-04-05-oidc-implementation-impl-plan.md  2026-04-05-password-login-fix-impl-plan.md  2026-04-05-password-login-fix-v2-impl-plan.md  2026-04-05-session-sync-impl-plan.md  design-document.md  implementation-plan.md
docs/maestro/plans/archive/: 2026-04-03-expansion-impl-plan.md  2026-04-03-markdown-composer-design.md  2026-04-03-markdown-composer-impl-plan.md  2026-04-03-polish-design.md  2026-04-03-polish-impl-plan.md  2026-04-03-room-list-design.md  2026-04-03-room-list-impl-plan.md  2026-04-03-timeline-design.md  2026-04-03-timeline-impl-plan.md  2026-04-04-fix-sync-error-design.md  2026-04-04-fix-sync-error-impl-plan.md  2026-04-04-fix-sync-error-v5-design.md  2026-04-04-fix-sync-error-v5-impl-plan.md  2026-04-04-login-impl-plan.md  2026-04-04-matrix-sdk-080-upgrade-design.md  2026-04-04-matrix-sdk-080-upgrade-impl-plan.md  2026-04-05-session-restoration-fix-design.md  2026-04-05-session-restoration-fix-impl-plan.md  2026-04-05-session-restoration-fix-v2-impl-plan.md  2026-04-06-spaces-support-design.md  2026-04-06-spaces-support-impl-plan.md
docs/maestro/state/: coder-delegation-p2.md  coder-delegation-p3.md  coder-delegation.md
docs/maestro/state/archive/: 2026-04-03-markdown-composer.md  2026-04-03-room-list.md  2026-04-03-timeline.md  claw-foundation-phase1.md  claw-foundation.md  markdown-composer-impl-session-v1.md  room-list-sidebar.md  timeline-view-impl.md
res/i18n/en/: cosmic_ext_constellations.ftl
src/: handlers.rs  handlers.rs.orig  i18n.rs  ipc.rs  item.rs  main.rs  main.rs.orig  preview.rs  rich_text.rs  unified_push.rs  utils.rs  view.rs
src/constellations/: app.rs  mod.rs  state.rs  tests.rs
src/frostmark/: mod.rs  renderer.rs  state.rs  structs.rs  style.rs  widgets.rs
src/matrix/: mod.rs  mod.rs.orig  tests.rs
src/settings/: app.rs  config.rs  mod.rs  room.rs  space.rs  user.rs
src/utils/: handlers.rs  mod.rs  preview.rs  unified_push.rs
src/view/: app.rs  chat.rs  chat.rs.orig  error.rs  login.rs  mod.rs  mod.rs.orig  switcher.rs
test_hierarchy/: Cargo.toml
tests/: cache_test.rs  imbl_extend_test.rs  imbl_methods_test.rs  imbl_pop.rs  imbl_pop_test.rs  imbl_test.rs  imbl_trunc.rs  menu_test.rs  restoration_race.rs
