[package]
name = "cosmic-ext-constellations"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master", features = ["tokio"] }
matrix-sdk = { version = "0.16.0", features = ["sqlite", "e2e-encryption", "sso-login", "testing"] }
matrix-sdk-ui = { version = "0.16.0" }
matrix-sdk-sqlite = "0.16.0"
matrix-sdk-base = "0.16.0"
tokio = { version = "1", features = ["full"] }
oo7 = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "4"
imbl = "6"
eyeball-im = "0.8"
url = "2"
dirs = "6.0.0"
tempfile = "3"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
cosmic-text = "0.12"
comrak = "0.49"
open = "5.3.3"
rfd = "0.17.2"
mime = "0.3.17"
mime_guess = "2.0.5"
html5ever = "0.27"
markup5ever_rcdom = "0.3"
bitflags = "2"

[dev-dependencies]
matrix-sdk-test = "0.16.0"
tempfile = "3"
wiremock = "0.6.5"

[patch.crates-io]
iced = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_core = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_widget = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_graphics = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_renderer = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_runtime = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_futures = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_winit = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_wgpu = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
iced_tiny_skia = { git = "https://github.com/pop-os/libcosmic", branch = "master" }
