[package]
name = "cosmic-ext-constellations"
version = "0.1.0"
author = "Joonas Tuomi <me@joonastuomi.fi>"
edition = "2024"
[features]
default = []
wgpu = ["libcosmic/wgpu"]

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", branch = "master", features = [
    "dbus-config",
    "desktop",
    "winit",
    "wayland",
    "tokio",
    "single-instance",
    "desktop-systemd-scope",
    "xdg-portal",
] }
matrix-sdk = { version = "0.16.0", features = ["sqlite", "e2e-encryption", "sso-login", "testing", "experimental-search"] }
matrix-sdk-ui = "0.16.0"
matrix-sdk-sqlite = "0.16.0"
matrix-sdk-base = "0.16.0"
tokio = { version = "1", features = ["full"] }
oo7 = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = "4"
imbl = "6"
eyeball-im = "0.8"
url = "2"
dirs = "6.0.0"
tempfile = "3"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
cosmic-text = "0.19"
pulldown-cmark = "0.10"
open = "5.3.3"
rfd = "0.17.2"
mime = "0.3.17"
mime_guess = "2.0.5"
rand = { version = "0.10.1", features = ["std_rng"] }
notify-rust = "4.15.0"
futures = "0.3.32"
ruma-events = "0.32.1"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.9"
rust-embed = "8"
unic-langid = "0.9"
mimalloc = { version = "0.1.50", features = ["secure"] }
livekit = "0.7"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
matrix-sdk-test = "0.16.0"
serial_test = "3.4.0"
tempfile = "3"
wiremock = "0.6.5"

[patch.crates-io]
# Many COSMIC apps need to patch iced or other dependencies to match what libcosmic uses.
# However, for a basic shell, let's start without patches and see if it compiles.

[lints.rust]
unused_imports = "warn"
